// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolInterestRates indexes REPL CASE 1: should increase correctly with time 1`] = `
{
  "currentTimestamp": {
    "hex": "0x642ac245",
    "type": "BigNumber",
  },
  "lastPoolBorrowIndex": {
    "hex": "0x033f7e81c61aae35baddff52",
    "type": "BigNumber",
  },
  "lastPoolSupplyIndex": {
    "hex": "0x033d7d2af99d5e4834674e95",
    "type": "BigNumber",
  },
  "lastUpdateTimestamp": {
    "hex": "0x642ac23b",
    "type": "BigNumber",
  },
  "poolBorrowRatePerYear": {
    "hex": "0x0e3496b8fa414d5134f6bb",
    "type": "BigNumber",
  },
  "poolSupplyRatePerYear": {
    "hex": "0x046423f4d3417f25ed03cd",
    "type": "BigNumber",
  },
}
`;

exports[`PoolInterestRates indexes REPL case 2: should not change if currentTimestamp == lastUpdateTimestamp 1`] = `
{
  "currentTimestamp": {
    "hex": "0x642ac23b",
    "type": "BigNumber",
  },
  "lastPoolBorrowIndex": {
    "hex": "0x033f7e81c61aae35baddff52",
    "type": "BigNumber",
  },
  "lastPoolSupplyIndex": {
    "hex": "0x033d7d2af99d5e4834674e95",
    "type": "BigNumber",
  },
  "lastUpdateTimestamp": {
    "hex": "0x642ac23b",
    "type": "BigNumber",
  },
  "poolBorrowRatePerYear": {
    "hex": "0x0e3496b8fa414d5134f6bb",
    "type": "BigNumber",
  },
  "poolSupplyRatePerYear": {
    "hex": "0x046423f4d3417f25ed03cd",
    "type": "BigNumber",
  },
}
`;
